gcc/testsuite/rust/rustc/ui/parser/lex-stray-backslash.rs
\ // { dg-error "" "" { target *-*-* } }

fn main() {}

